# lineageguard-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: sample-eval-results.json  sample-live-result.json
cloudflare-site/: README.md  _headers  index.html
demo/dbt_project/: dbt_project.yml  profiles.yml
demo/dbt_project/models/: schema.yml
demo/dbt_project/models/features/: customer_features.sql
demo/dbt_project/models/staging/: stg_customers.sql
demo/dbt_project/seeds/: raw_customers.csv
demo/events/: breaking-column-rename.json
demo/faults/: breaking-schema.sql
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  SECURITY.md  SUBMISSION.md  SUBMISSION_EVIDENCE.md  VIDEO_NARRATION.md
evals/: cases.json  run_evals.py
infra/actions/: lineageguard.yml
infra/recipes/: dbt.yml
skills/ml-change-safety/: SKILL.md
src/lineageguard/: __init__.py  action.py  api.py  cli.py  config.py  context.py  datahub.py  execution.py  github.py  models.py  repair.py  risk.py  workflow.py
src/lineageguard/web/: index.html
tests/: test_action.py  test_api.py  test_execution.py  test_github.py  test_mcp_context.py  test_risk.py  test_workflow.py
